Remove build artifacts from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ obj/
 *.csproj.GenerateResource.cache
 *.AssemblyInfoInputs.cache
 *.GeneratedMSBuildEditorConfig.editorconfig
+*.resources
 
 
 # User-specific files
