--- a/Login_Version1.0/Login_Version1.0/Login_Version1.0.csproj
+++ b/Login_Version1.0/Login_Version1.0/Login_Version1.0.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Dashboard_Version1.0\Dashboard_Version1.0\MainDashboard\MainDashboard.csproj" />
   </ItemGroup>
 
 </Project>
