--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-.vs/
-*.suo
+# Ignore build results
+bin/
+obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.editorconfig
+*.nuget.dgspec.json
+*.nuget.cache
+*.sourcelink.json
+*.FileListAbsolute.txt
+*.genruntimeconfig.cache
+*.assets.cache
+*.csproj.CoreCompileInputs.cache
+*.csproj.GenerateResource.cache
+*.AssemblyInfoInputs.cache
+*.GeneratedMSBuildEditorConfig.editorconfig
+*.resources
+
+
+# User-specific files
 *.user
+*.vs/
+*.suo
 *.db
 *.vsidx
